# bf3_ext

./: .dockerignore  .gitignore  .gitlab-ci.yaml  README.md  bf3-deployment.yaml  bf3-secret.yaml  bf3-service.yaml  clean_check.sh  docker-compose.yml  kill_pod.sh  logs.sh  shell_check.sh
client/: CMakeLists.txt  Dockerfile  build.sh
client/include/: client.h  io.h
client/src/: client.cpp  io.cpp  main.cpp  test.cpp
database/: database.sql
server/: CMakeLists.txt  Dockerfile  build.sh
server/include/: labels.h  server.h
server/src/: main.cpp  server.cpp  test.cpp
test/: CMakeLists.txt
